--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 
 
 
-<nav class="navbar"> 
-        <h2 class="siteName" routerLink="">iDesign</h2>
-        <a routerLink='/about'>About</a>
-        <a routerLink="/services">Services</a>
-        <a routerLink="/contact">Contact</a>
+<nav> 
+        <ul class="siteBrand" routerLink=""> iDesign
+                <li><a routerLink='contact'>Contact</a></li>
+                <li><a routerLink="services">Services</a></li>
+                <li><a routerLink="about">About</a></li>
+        </ul>
 </nav>
+
